# splitpdf

./: .gitignore  README.md  build.js  package-lock.json  package.json  readme.md
.cursor/rules/: important.mdc
pdfium/: LICENSE  PDFiumConfig.cmake
rust_pdf_splitter/: Cargo.toml  build.rs
rust_pdf_splitter/src/: lib.rs  main.rs
rust_splitter/: Cargo.toml
rust_splitter/src/: lib.rs
spec/: code-conventions.md  project-description.md
src/: cli.js  index.js
test/: README.md  check_page_counts.py  cli.test.js  generate-test-pdf.js
