[package]
name = "rust_pdf_splitter"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_pdf_splitter"
path = "src/lib.rs"

[[bin]]
name = "rust_pdf_splitter"
path = "src/main.rs"

[dependencies]
pdfium-render = "0.8.13" # Check for latest version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 