[package]
name = "rust_splitter"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_splitter"
crate-type = ["cdylib", "staticlib"] # For FFI and static linking

[dependencies]
pdfium-render = "0.8.13" # Check for latest version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 